ignore video files

--- a/HW01/HW01.ipynb
+++ b/HW01/HW01.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "# Computer Vision - HW01\n",
     "<font color='Green' size='4'>Mohammad Doosti Lakhani - 98722278</font>\n",
@@ -24,7 +26,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "## 1 Importing Libraries"
    ]
@@ -32,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -45,7 +51,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "## 2 Loading a Grayscale Image"
    ]
@@ -53,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -84,7 +94,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "## 3 Functions\n",
     "Just a wrapper around built-in CV2 functions."
@@ -93,7 +105,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "def gaussian(image, size, std):\n",
@@ -111,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "def average(image, size):\n",
@@ -129,7 +145,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "## 4. Gaussian vs. Average\n",
     "1. Applying 5x5 Average Filter\n",
@@ -139,7 +157,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "### 4.A Applying 5x5 Average Filter"
    ]
@@ -147,7 +167,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -180,7 +202,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "### 4.B Applying 5x5 Gaussian Filter\n",
     "In this step we just need to use the defined gaussian filter then using convolve2d function for doing this."
@@ -189,7 +213,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -223,7 +249,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "### 4.C Compare Using RMSE\n",
     "As images are same in term of size and content, RMSE can project the difference adequately."
@@ -232,7 +260,9 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "def RMSE(x, y):\n",
@@ -250,7 +280,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -273,7 +305,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "## 5 Gaussian vs. 2X Gaussian\n",
     "1. Applying 5x5 Gaussian Filter With `sigma1=1` *Twice*\n",
@@ -283,7 +317,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "### 5.A Applying 5x5 Gaussian Filter With `sigma1=1` Twice\n",
     "This is same as previous step, the only difference is that we apply gaussian twice subsequently."
@@ -292,7 +328,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -327,7 +365,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "### 5.B Applying a Gaussian Filter with Proper Size and `sigma2=sqrt(2)` *Once*\n",
     "To get the proper size, there is rule of thump that says the filter size should be biggest odd number which is less than 6 times of sigma.\n",
@@ -337,7 +377,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -371,7 +413,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "### 5.C Compare Using RMSE\n",
     "As images are same in term of size and content, RMSE can project the difference adequately."
@@ -380,7 +424,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -406,7 +452,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "As we can see the last number which demonstrates the discrepancy between blured image using 7x7 gaussian once and 5x5 gaussian twice is very small which is a depiction for high similarity between the outputs. So the idea of using multiple gaussians filter subsequently can be achieved using a higher (bigger size) gaussian is approximately true."
    ]
