add constructing texton dictionary

--- a/HW03/CV_HW03.ipynb
+++ b/HW03/CV_HW03.ipynb
@@ -72,7 +72,8 @@
         "import cv2\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
-        "import random"
+        "import random\n",
+        "from sklearn.cluster import KMeans"
       ],
       "execution_count": 0,
       "outputs": []
@@ -529,7 +530,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 553
+          "height": 552
         },
         "outputId": "cf2791ad-9727-4706-8731-ba217fad65fd"
       },
@@ -627,7 +628,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 286
+          "height": 285
         },
         "outputId": "9f84ee4b-3d03-44eb-9eba-fd84df927bb9"
       },
@@ -670,7 +671,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 286
+          "height": 285
         },
         "outputId": "2b5b9f60-71a9-48a9-e9ed-7ac6d6047d43"
       },
@@ -709,7 +710,48 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ivAW8e-8mjiB",
+        "id": "eVAbDMevqH7K",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        },
+        "outputId": "8b3e3052-52c3-48dc-b333-d37abc6282df"
+      },
+      "source": [
+        "## building texton dictionary\n",
+        "n_textons = 40\n",
+        "texton_dictionary = np.zeros((n_classes, n_textons, crop_size*crop_size))\n",
+        "\n",
+        "for i in range(n_classes):\n",
+        "    kmeans = KMeans(n_clusters=n_textons)\n",
+        "    class_MR8 = all_classes_responses[i]\n",
+        "    kmeans.fit(class_MR8.reshape(class_MR8.shape[0]*class_MR8.shape[1], crop_size*crop_size))\n",
+        "    texton_dictionary[i] =  kmeans.cluster_centers_\n",
+        "    print('Class #{} has been processed...'.format(i+1))\n",
+        "\n",
+        "texton_dictionary.shape"
+      ],
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(61, 40, 40000)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 113
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XmJpTaFwti7V",
         "colab_type": "code",
         "colab": {}
       },
